<resources>
    <string name="app_name">Star Trak Episode Tracker</string>
    <string name="button_addEpisode">Add Episode</string>
    <string name="hint_episodeTitle">Episode Name</string>
    <string name="hint_episodeSeason">Season</string>
    <string name="hint_episodeSeries">Series</string>
    <string name="hint_episodeRating">Rating</string>
    <string name="menu_addEpisode"> Add </string>
    <string name="menu_cancelEpisodeAdd">Cancel</string>
    <string name="enter_episode_title"> Please enter an Episode Name</string>
    <string name="save_episode">Save Episode</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_addVideo">Add Video</string>
    <string name="select_episode_image">Select Episode image</string>
    <string name="change_episode_image">Change Image</string>
    <string name="episode_image">Episode image</string>
    <string name="button_filmingLocation"> Choose Filming Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteEpisode">Delete Episode</string>
</resources>