<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StarTrakActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/MyToolbar">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/episodeTitle"
                    android:layout_width="391dp"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:fontFamily="@font/orbitron_medium"
                    android:hint="@string/hint_episodeTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/episodeSeason"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:fontFamily="@font/orbitron_medium"
                    android:hint="@string/hint_episodeSeason"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/episodeSeries"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:fontFamily="@font/orbitron_medium"
                    android:hint="@string/hint_episodeSeries"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/DimGray"
                    android:drawableEnd="@android:drawable/ic_menu_crop"
                    android:fontFamily="@font/orbitron_medium"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:rotationX="17"
                    android:text="@string/button_addImage"
                    android:textColor="@color/White"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/episodeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="TODO" />

                <Button
                    android:id="@+id/filmingLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/DimGray"
                    android:drawableEnd="@android:drawable/ic_dialog_map"
                    android:fontFamily="@font/orbitron_medium"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:rotationX="17"
                    android:stateListAnimator="@null"
                    android:text="@string/button_filmingLocation"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/ForestGreen"
                    android:drawableEnd="@android:drawable/checkbox_on_background"
                    android:fontFamily="@font/orbitron_medium"
                    android:outlineAmbientShadowColor="#4CAF50"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:rotationX="17"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addEpisode"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="24sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>